--- a/src/app/dashboard/candidat/candidat-list/candidat-list.component.html
+++ b/src/app/dashboard/candidat/candidat-list/candidat-list.component.html
@@ -9,7 +9,7 @@
         <form class="form-success mb-4">
           <div class="row mb-4">
             <div class="col-md-4 mb-2 mb-sm-0">
-              <select class="selectpicker form-control " id="type-status" title="Tous les statut" data-style="btn-solid">
+              <select class="form-control " id="type-status" title="Tous les statut" data-style="btn-solid">
                 <option value="">Tous les statut</option>
                 <option value="pending">En attente</option>
                 <option value="1">Publier</option>
@@ -33,7 +33,7 @@
               </div>
             </div>
             <div class="col-md-4 mb-2 mb-sm-0">
-              <select class="selectpicker form-control " id="position" title="Tous les positions" data-style="btn-solid">
+              <select class="form-control " id="position" title="Tous les positions" data-style="btn-solid">
                 <option value="">Tous les positions</option>
                 <option value="1">A la une</option>
                 <option value="0">Standard</option>
