--- a/src/app/dashboard/company/company-lists/company-lists.component.html
+++ b/src/app/dashboard/company/company-lists/company-lists.component.html
@@ -9,7 +9,7 @@
 
         <div class="row mb-4">
           <div class="col-md-4 mb-2 mb-sm-0">
-            <select class="selectpicker form-control " id="type-status" title="Tous les statut" data-style="btn-solid">
+            <select class="form-control " id="type-status" title="Tous les statut" data-style="btn-solid">
               <option value="">Tous les statut</option>
               <option value="pending">En attente</option>
               <option value="1">Publier</option>
