--- a/src/app/directives/account/status-changer/status-changer.component.html
+++ b/src/app/directives/account/status-changer/status-changer.component.html
@@ -16,7 +16,7 @@
               </div>
               <div class="col-sm-12">
                 <div class="form-group">
-                  <select class="select2 form-control" name="status" [(ngModel)]="status">
+                  <select class="form-control" name="status" [(ngModel)]="status">
                     <option value="1">Publier</option>
                     <option value="0">Désactiver</option>
                     <option value="pending">En attente</option>
