--- a/src/app/directives/offers/postuled-candidates/postuled-candidates.component.html
+++ b/src/app/directives/offers/postuled-candidates/postuled-candidates.component.html
@@ -1,10 +1,10 @@
 <div class="ibox">
   <div class="ibox-head">
-    <div class="ibox-title">Les candidats ayant été sélectionnés/postulés</div>
+    <div class="ibox-title">Les candidats ayant été sélectionnés</div>
   </div>
   <div class="ibox-body">
-    <ul class="media-list media-list-divider mr-2 scroller">
-      <li class="media align-items-center" *ngFor="let request of Requests">
+    <ul  class="media-list media-list-divider mr-2 scroller" data-height="400px">
+      <li class="media align-items-center" *ngFor="let request of Requests | interestCandidate:'interested'">
         <div class="media-body d-flex align-items-center">
           <div class="flex-1">
             <div class="media-heading">
@@ -37,6 +37,55 @@
           </div>
           <button class="btn btn-sm btn-outline-primary" (click)="onValidate(request.id_request, $event)" *ngIf="request.status === 'pending'">Valider</button>
           <button class="btn btn-sm ml-2 btn-outline-danger" (click)="onReject(request.id_request, $event)" *ngIf="request.status === 'pending'">Rejeter</button>
+        </div>
+      </li>
+    </ul>
+    <div *ngIf="Requests.length <= 0 && !loading">Néant</div>
+    <div *ngIf="loading"> Chargement en cours ...</div>
+  </div>
+</div>
+
+<!-- Les candidats ayant postulés -->
+
+<div class="ibox">
+  <div class="ibox-head">
+    <div class="ibox-title">Les candidats ayant postulés</div>
+  </div>
+  <div class="ibox-body">
+    <ul  class="media-list media-list-divider mr-2 scroller" data-height="400px">
+      <li class="media align-items-center" *ngFor="let request of Requests | interestCandidate:'apply'">
+        <div class="media-body d-flex align-items-center">
+          <div class="flex-1">
+            <div class="media-heading">
+              <a target="_blank" [routerLink]="[ '/candidate',  request.candidate.ID, 'edit']">{{request.candidate.title}}</a>
+              <span class="badge badge-default ml-2" *ngIf="request.status === 'pending' && request.view === 0">En attente</span>
+              <span class="badge badge-success ml-2" *ngIf="request.status === 'pending' && request.view === 1 ">Valider</span>
+              <span class="badge badge-success ml-2" *ngIf="request.status === 'validated'">Sélectionner</span>
+              <span class="badge badge-danger ml-2" *ngIf="request.status === 'reject'">Réjeter</span>
+            </div>
+
+            <div class="flex-1">
+              <small class="badge badge-primary ml-1 ml-2"><i class="ti-alarm-clock"></i> {{request.date_add | momendate:'LLLL'}}</small>
+            </div>
+
+            <div class="flex-1">
+              <small class="text-muted">{{request.candidate.privateInformations.firstname}}
+                {{request.candidate.privateInformations.lastname}}</small>
+            </div>
+            
+
+            <div class="mt-2 mb-2 flex-1" *ngIf="request.lm_link">
+              <a href="{{request.lm_link.scheme}}://{{request.lm_link.host}}{{request.lm_link.path}}" target="_blank" class="badge badge-info" [title]="request.lm_name">
+                <span class="btn-icon"><i class="la la-paperclip"></i>Lettre de motivation</span>
+              </a>
+            </div>
+            <div>
+              <span class="badge badge-default text-uppercase" *ngIf="request.type === 'apply'">à postuler</span>
+            </div>
+
+          </div>
+          <button class="btn btn-sm btn-outline-primary" (click)="onValidate(request.id_request, $event)" *ngIf="request.status === 'pending' && request.view === 0">Valider</button>
+          <button class="btn btn-sm ml-2 btn-outline-danger" (click)="onReject(request.id_request, $event)" *ngIf="request.status === 'pending' && request.view === 0">Rejeter</button>
         </div>
       </li>
     </ul>
