--- a/src/app/dashboard/offers/offer-lists/offer-lists.component.html
+++ b/src/app/dashboard/offers/offer-lists/offer-lists.component.html
@@ -39,7 +39,7 @@
             </div>
           </div>
           <div class="col-md-4">
-            <button type="button" (click)="resetFilterSearch()" class="btn btn-info">Reinitialiser les filtres</button>
+            <button type="button" (click)="resetFilterSearch()" class="btn btn-sm btn-info">Reinitialiser les filtres</button>
           </div>
         </div>
       </form>
@@ -54,7 +54,7 @@
               <th>Position</th>
               <th>Type</th>
               <th>Date limite</th>
-              <th>Date d'ajout</th>
+              <th>Date de publication</th>
               <th>Statut</th>
               <th>Entreprise</th>
               <th>Région</th>
