--- a/src/app/layouts/app-sidebar/app-sidebar.component.html
+++ b/src/app/layouts/app-sidebar/app-sidebar.component.html
@@ -19,70 +19,106 @@
 <div class="sidebar-tabs">
   <div class="tab-content scroller">
     <div class="tab-pane sidebar-submenu fade active show" id="sidemenu-1">
-      <a [routerLink]="['/candidat-lists']" routerLinkActive="router-link-active"><i class="ti-id-badge menu-item-icon"></i>
+      <a [routerLink]="['/candidat-lists']" routerLinkActive="router-link-active"><i
+        class="ti-id-badge menu-item-icon"></i>
         <div>
           <h5 class="menu-item-title">Candidats
-          </h5><small class="menu-item-text">Voir les candidats</small>
+          </h5>
+          <small class="menu-item-text">Voir les candidats</small>
         </div>
       </a>
-      <a [routerLink]="['/company-lists']" routerLinkActive="router-link-active"><i class="la la-building menu-item-icon"></i>
+      <a [routerLink]="['/company-lists']" routerLinkActive="router-link-active"><i
+        class="la la-building menu-item-icon"></i>
         <div>
           <h5 class="menu-item-title">Entreprises
-          </h5><small class="menu-item-text">Voir les entreprise</small>
+          </h5>
+          <small class="menu-item-text">Voir les entreprise</small>
         </div>
       </a>
-      <a [routerLink]="['/offer-lists']" routerLinkActive="router-link-active"><i class="la la-clipboard menu-item-icon"></i>
+      <a [routerLink]="['/offer-lists']" routerLinkActive="router-link-active"><i
+        class="la la-clipboard menu-item-icon"></i>
         <div>
           <h5 class="menu-item-title">Offres
-          </h5><small class="menu-item-text">Voir les offres</small>
+          </h5>
+          <small class="menu-item-text">Voir les offres</small>
         </div>
       </a>
-      <a [routerLink]="['/formations']" routerLinkActive="router-link-active"><i class="la la-clipboard menu-item-icon"></i>
+      <a [routerLink]="['/formations']" routerLinkActive="router-link-active"><i
+        class="la la-clipboard menu-item-icon"></i>
         <div>
           <h5 class="menu-item-title">Formations
-          </h5><small class="menu-item-text">Voir les formations</small>
+          </h5>
+          <small class="menu-item-text">Voir les formations</small>
         </div>
       </a>
-      <a [routerLink]="['/request-formations']" routerLinkActive="router-link-active"><i class="la la-clipboard menu-item-icon"></i>
+      <a [routerLink]="['/request-formations']" routerLinkActive="router-link-active"><i
+        class="la la-clipboard menu-item-icon"></i>
         <div>
           <h5 class="menu-item-title">Demande formations
-          </h5><small class="menu-item-text">Voir les demande de formation</small>
+          </h5>
+          <small class="menu-item-text">Voir les demande de formation</small>
+        </div>
+      </a>
+      <a [routerLink]="['/small-ad']" routerLinkActive="router-link-active"><i
+        class="la la-clipboard menu-item-icon"></i>
+        <div>
+          <h5 class="menu-item-title">Les petits annonces
+          </h5>
+          <small class="menu-item-text">Voir les petits annonces</small>
+        </div>
+      </a>
+      <a [routerLink]="['/work-temporary']" routerLinkActive="router-link-active"><i
+        class="la la-clipboard menu-item-icon"></i>
+        <div>
+          <h5 class="menu-item-title">Les travails temporaires
+          </h5>
+          <small class="menu-item-text">Voir les travails temporaire</small>
         </div>
       </a>
       <a [routerLink]="['/ads']" routerLinkActive="router-link-active"><i class="la la-bullhorn menu-item-icon"></i>
         <div>
           <h5 class="menu-item-title">Publicités
-          </h5><small class="menu-item-text">Gérer les publicités</small>
+          </h5>
+          <small class="menu-item-text">Gérer les publicités</small>
         </div>
       </a>
       <a [routerLink]="['/blogs']" routerLinkActive="router-link-active"><i class="la la-thumb-tack menu-item-icon"></i>
         <div>
           <h5 class="menu-item-title">Blogs
-          </h5><small class="menu-item-text">Voir les articles</small>
+          </h5>
+          <small class="menu-item-text">Voir les articles</small>
         </div>
       </a>
-      <a [routerLink]="['/newsletters']" routerLinkActive="router-link-active"><i class="la la-newspaper-o menu-item-icon"></i>
+      <a [routerLink]="['/newsletters']" routerLinkActive="router-link-active"><i
+        class="la la-newspaper-o menu-item-icon"></i>
         <div>
           <h5 class="menu-item-title">Newsletters
-          </h5><small class="menu-item-text">Voir les newsletters</small>
+          </h5>
+          <small class="menu-item-text">Voir les newsletters</small>
         </div>
       </a>
-      <a [routerLink]="['/taxonomy', 'software']" routerLinkActive="router-link-active"><i class="la la-desktop menu-item-icon"></i>
+      <a [routerLink]="['/taxonomy', 'software']" routerLinkActive="router-link-active"><i
+        class="la la-desktop menu-item-icon"></i>
         <div>
           <h5 class="menu-item-title">Logiciels
-          </h5><small class="menu-item-text">Gestionnaire des logiciels</small>
+          </h5>
+          <small class="menu-item-text">Gestionnaire des logiciels</small>
         </div>
       </a>
-      <a [routerLink]="['/taxonomy', 'language']" routerLinkActive="router-link-active"><i class="la la-language menu-item-icon"></i>
+      <a [routerLink]="['/taxonomy', 'language']" routerLinkActive="router-link-active"><i
+        class="la la-language menu-item-icon"></i>
         <div>
           <h5 class="menu-item-title">Les langues
-          </h5><small class="menu-item-text">Gestionnaire de langues</small>
+          </h5>
+          <small class="menu-item-text">Gestionnaire de langues</small>
         </div>
       </a>
-      <a [routerLink]="['/taxonomy', 'job_sought']" routerLinkActive="router-link-active"><i class="la la-mortar-board menu-item-icon"></i>
+      <a [routerLink]="['/taxonomy', 'job_sought']" routerLinkActive="router-link-active"><i
+        class="la la-mortar-board menu-item-icon"></i>
         <div>
           <h5 class="menu-item-title">Metiers
-          </h5><small class="menu-item-text">Gestionnaire des metiers</small>
+          </h5>
+          <small class="menu-item-text">Gestionnaire des metiers</small>
         </div>
       </a>
 
