--- a/src/app/dashboard/company/company-edit/company-edit.component.html
+++ b/src/app/dashboard/company/company-edit/company-edit.component.html
@@ -19,7 +19,7 @@
             <div class="form-group">
               <label class="font-bold">Nom de l'entreprise</label>
               <input class="form-control from-control-solid" autocomplete="off" name="title" type="text" [(ngModel)]="editor.title"
-                placeholder="Nom de l'entreprise" [ngClass]="{'no-access': authService.getRole() === 'editor' || authService.getRole() === 'contributor'}" required>
+                placeholder="Nom de l'entreprise" required>
             </div>
           </div>
         </div>
@@ -69,7 +69,7 @@
             <label class="font-bold">Numéro de téléphone</label>
             <div class="mb-2" ngModelGroup="cellphones" #cellphonesCtrl="ngModelGroup">
               <div class="input-group" *ngFor="let cellphone of editor.cellphones; let i = index">
-                <input class="form-control mb-2" name="{{i}}" [(ngModel)]="cellphone.value" type="text" 
+                <input class="form-control mb-2" name="{{i}}" [(ngModel)]="cellphone.value" type="text"
                 placeholder="Numére de votre cellulaire" [ngClass]="{'no-access': authService.getRole() === 'editor' || authService.getRole() === 'contributor'}">
                 <span class="input-group-btn ml-2">
                   <button class="btn btn-warning btn-icon-only btn-circle btn-sm" (click)="onRemoveCellphone(cellphone.id)"
