--- a/src/app/dashboard/candidat/candidate-edit/candidate-edit.component.html
+++ b/src/app/dashboard/candidat/candidate-edit/candidate-edit.component.html
@@ -586,6 +586,8 @@
               </div>
             </div>
 
+            <wallet [userId]="userId"></wallet>
+
             <app-cover-letter [candidateId]="Candidate.ID"></app-cover-letter>
 
           </div>
