--- a/src/app/dashboard/formations/formation-edit/formation-edit.component.html
+++ b/src/app/dashboard/formations/formation-edit/formation-edit.component.html
@@ -20,7 +20,7 @@
             <div class="row">
               <div class="form-group mb-4 col-sm-8">
                 <label class="font-bold">Titre du formation </label>
-                <input class="form-control form-control-solid" [(ngModel)]="Editor.title" required type="text" name="title"
+                <input class="form-control form-control-solid" autocomplete="off" [(ngModel)]="Editor.title" required type="text" name="title"
                   placeholder="Titre de l'offre">
               </div>
             </div>
@@ -60,7 +60,7 @@
             <div class="row">
               <div class="col-sm-6 form-group mb-4">
                 <label class="font-bold">Adresse de l'établissement</label>
-                <input class="form-control form-control-solid" [(ngModel)]="Editor.address" required type="text" name="address"
+                <input class="form-control form-control-solid" autocomplete="off" [(ngModel)]="Editor.address" required type="text" name="address"
                   placeholder="Adresse de létablissement">
               </div>
             </div>
