--- a/src/app/dashboard/small-ad/small-ad-edit/small-ad-edit.component.html
+++ b/src/app/dashboard/small-ad/small-ad-edit/small-ad-edit.component.html
@@ -14,7 +14,7 @@
               <div class="col-12">
                 <div class="form-group">
                   <label class="font-bold">Titre de l'annonce</label>
-                  <input type="text"class="form-control" name="title" [(ngModel)]="Ad.title" required="required">
+                  <input type="text" class="form-control" name="title" [(ngModel)]="Ad.title.rendered" required="required">
 
                 </div>
               </div>
@@ -46,11 +46,11 @@
                 </ng-select>
               </div>
             </div>
-               
+
             <div class="row">
               <div class="col-12">
                 <div class="form-group">
-                  <label class="font-bold">Code postal ou nom d'une ville</label>
+                  <label class="font-bold">Ville</label>
                   <ng-select name="town" [items]="Town" [multiple]="false"  bindLabel="name"
                              bindValue="term_id" [(ngModel)]="Ad.town" required>
                   </ng-select>
@@ -61,7 +61,7 @@
             <div class="row">
               <div class="col-6">
                 <div class="form-group">
-                  <label class="font-bold">Adresse physique de l'annonce <span style="color: red">*</span></label>
+                  <label class="font-bold">Adresse<span style="color: red">*</span></label>
                   <input type="text" autocomplete="off" class="form-control" name="address" [(ngModel)]="Ad.address" required="required">
 
                 </div>
@@ -73,24 +73,16 @@
                 <div class="form-group">
                   <label class="font-bold">Budget <span style="color: red">*</span></label>
                   <input type="number" class="form-control" name="price" [(ngModel)]="Ad.price"
-                         placeholder="Budget en ariary (MGA)" required="required">
+                         placeholder="Budget en ariary (MGA)">
                 </div>
               </div>
             </div>
 
             <div class="row">
-              <div class="col-sm-6 form-group mb-4">
-                <label class="font-bold">Secteur d'activité</label>
-                <ng-select name="area" [items]="Areas" [multiple]="false" [loading]="loadingArea" bindLabel="name"
-                           bindValue="term_id" [(ngModel)]="Ad.activity_area" required>
-                </ng-select>
-              </div>
-            </div>
-            <div class="row">
               <div class="col-sm-12">
                 <div class="form-group mb-4">
                   <label class="font-bold">Description</label>
-                  <editor apiKey="2grxn9iofnxolcaedqa399sh4ft6c1mg3e1kumgnyq6o0ap1" required [(ngModel)]="Ad.description"
+                  <editor apiKey="2grxn9iofnxolcaedqa399sh4ft6c1mg3e1kumgnyq6o0ap1" required [(ngModel)]="Ad.content.rendered"
                           name="description" [init]="tinyMCESettings">
                   </editor>
                 </div>
@@ -110,10 +102,17 @@
             <div class="row">
               <div class="col-6">
                 <div class="form-group">
-                  <label class="font-bold">Numero de téléphone <span style="color: red">*</span></label>
-                  <input type="text" class="form-control"  name="phone" [(ngModel)]="Ad.phone"
+                  <label class="font-bold">Numéro de téléphone <span style="color: red">*</span></label>
+                  <input type="text" class="form-control"  name="phone" [(ngModel)]="Ad.cellphone"
                          placeholder="Numéro de téléphone" required="required">
                 </div>
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+              <div class="col-6 font-bold font-15">La galeries</div>
+              <div class="col-12 mt-2">
+                <img [src]="picture.sizes.thumbnail" class="rounded float-left mr-2" *ngFor="let picture of Ad.gallery" [alt]="picture.alt">
               </div>
             </div>
           </div>
@@ -121,14 +120,47 @@
             <div></div>
             <div>
               <button class="btn btn-primary mr-2" type="submit" [disabled]="loading">
-                <span>Publier</span>
+                <span>Enregistrer</span>
               </button>
-              <button class="btn btn-default" data-dismiss="modal" type="button" [disabled]="loading">
-                <span>Annuler</span>
-              </button>
+
+              <a class="btn btn-default"  [routerLink]="['/small-ad']">
+                <span>Retour</span>
+              </a>
             </div>
           </div>
         </form>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-4">
+    <div class="ibox">
+      <div class="ibox-body">
+        <div class="modal-content">
+          <div class="modal-header p-4">
+            <h5 class="modal-title uppercase">L'annonceur</h5>
+          </div>
+          <div class="modal-body">
+            <div class="row mb-2">
+              <div class="col-6 text-muted">Nom & Prenom:</div>
+              <div class="col-6">{{ User.name }}</div>
+            </div>
+            <div class="row mb-2">
+              <div class="col-6 text-muted">Type de compte:</div>
+              <div class="col-6 font-bold"><span class="badge badge-info">{{ User.role }}</span></div>
+            </div>
+            <div class="row mb-2">
+              <div class="col-6 text-muted">Email:</div>
+              <div class="col-6" style="word-break: break-all">
+                {{ User.email }}
+              </div>
+            </div>
+            <div class="row mb-2" *ngIf="User.view_link">
+              <div class="col-6 text-muted">
+                <a [routerLink]="User.view_link" class="btn btn-sm btn-outline-blue">Voir l'annonceur</a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
